Fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -2,19 +2,27 @@ body {
     margin: 0;
 }
 
-.CardSideWrapper {
-    display: flex;
+.ContentWrapper {
+    display: grid;
     justify-content: center;
-    position: absolute;
-    height: 100vh;
     width: 100vw;
+    height: 100vh;
+}
+
+.CardSideWrapper {
+    display: grid;
+    justify-content: center;
+    grid-row: 1;
+    grid-column: 1;
+    height: fit-content;
 }
 
 .Card {
     transition: transform 0.1s ease-in-out;
     height: 100%;
-    width: 100%;
     z-index: 5;
+    grid-row: 1;
+    grid-column: 1;
 }
 
 .Card.Flipped {
@@ -23,12 +31,13 @@ body {
 
 .CardButton {
     background: none;
-    position: absolute;
     width: 100%;
     height: 100%;
     z-index: 10;
     border: none;
     padding: 0;
+    grid-row: 1;
+    grid-column: 1;
 }
 
 .CardButton.Hidden {
